--- a/manifests/cluster-users/overlays/lab/cluster-role-bindings.yaml
+++ b/manifests/cluster-users/overlays/lab/cluster-role-bindings.yaml
@@ -13,3 +13,6 @@ subjects:
 - apiGroup: rbac.authorization.k8s.io
   kind: User
   name: jason.horn@redhat.com
+- apiGroup: rbac.authorization.k8s.io
+  kind: User
+  name: spencerhorn@gmail.com
