removed self heal

--- a/manifests/custom-certs/overlays/lab/argocd-app-customcerts-lab.yaml
+++ b/manifests/custom-certs/overlays/lab/argocd-app-customcerts-lab.yaml
@@ -12,6 +12,4 @@ spec:
     repoURL: 'https://github.com/hornjason/argocd-lab.git'
     targetRevision: demo
   project: default
-  syncPolicy:
-    automated:
-      selfHeal: true
+  syncPolicy: {}
