--- a/manifests/custom-certs/overlays/lab/kustomization.yaml
+++ b/manifests/custom-certs/overlays/lab/kustomization.yaml
@@ -2,7 +2,7 @@ bases:
 - ../../base
 
 patchesStrategicMerge:
-- cert-manager-namespace.yaml
+#- cert-manager-namespace.yaml
 - route53-sealed-secret.yaml
 - cert-manager-crd.yaml
 - cluster-issuer.yaml
