--- a/manifests/bootstrap/argocd-app-clusterusers-lab.yaml
+++ b/manifests/bootstrap/argocd-app-clusterusers-lab.yaml
@@ -1,18 +1,16 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: identity-provider-lab
+  name: cluster-users-lab
   namespace: argocd
 spec:
   destination:
     namespace: argocd
     server: 'https://kubernetes.default.svc'
   source:
-    path: manifests/identity-provider/overlays/lab
+    path: manifests/cluster-users/overlays/lab
     repoURL: 'https://github.com/hornjason/argocd-lab.git'
-    targetRevision: master
+    targetRevision: demo
   project: default
   syncPolicy:
-    automated: 
-      prune: true
-      selfHeal: true
+    automated: {}
