--- a/manifests/bootstrap/identity-provider/overlays/dev/argocd-app-idp-dev.yaml
+++ b/manifests/bootstrap/identity-provider/overlays/dev/argocd-app-idp-dev.yaml
@@ -1,18 +1,16 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: identity-provider-lab
+  name: identity-provider-dev
   namespace: argocd
 spec:
   destination:
     namespace: argocd
-    server: 'https://kubernetes.default.svc'
+    server: 'https://api.managed.foo.bar:6443'
   source:
-    path: manifests/identity-provider/overlays/lab
+    path: manifests/identity-provider/overlays/dev
     repoURL: 'https://github.com/hornjason/argocd-lab.git'
-    targetRevision: master
+    targetRevision: demo
   project: default
   syncPolicy:
-    automated: 
-      prune: true
-      selfHeal: true
+    automated: {}
