--- a/manifests/bootstrap/lab/argocd-app-idp-lab.yaml
+++ b/manifests/bootstrap/lab/argocd-app-idp-lab.yaml
@@ -13,6 +13,4 @@ spec:
     targetRevision: master
   project: default
   syncPolicy:
-    automated: 
-      prune: true
-      selfHeal: true
+    automated: {}
