--- a/manifests/bootstrap/lab/argocd-app-argocd.yaml
+++ b/manifests/bootstrap/lab/argocd-app-argocd.yaml
@@ -10,7 +10,7 @@ spec:
   source:
     path: manifests/argocd/overlays/lab
     repoURL: 'https://github.com/hornjason/argocd-lab.git'
-    targetRevision: demo
+    targetRevision: master
   project: default
   syncPolicy:
     automated: {}
