Updated day2 play

--- a/deploy/tasks/argocd-apps.yaml
+++ b/deploy/tasks/argocd-apps.yaml
@@ -1,51 +1,59 @@
-- name: Deploy Custom Certs Lab Config in ArgoCD
+- name: Deploy Bootstrap Argo App of Apps
   community.kubernetes.k8s:
     state: present
     kubeconfig: "{{ cluster_kubeconfig }}"
     wait: yes
-    definition: "{{ lookup('file', '{{ git_local_dir }}/manifests/custom-certs/overlays/lab/argocd-app-customcerts-lab.yaml') | from_yaml }}"
-
-- name: Deploy Infra Nodes Lab Config in ArgoCD
-  community.kubernetes.k8s:
-    state: present
-    kubeconfig: "{{ cluster_kubeconfig }}"
-    wait: yes
-    definition: "{{ lookup('file', '{{ git_local_dir }}/manifests/infra-nodes/overlays/lab/argocd-app-infranodes-lab.yaml') | from_yaml }}"
-
-- name: Deploy Registry Lab Config in ArgoCD
-  community.kubernetes.k8s:
-    state: present
-    kubeconfig: "{{ cluster_kubeconfig }}"
-    wait: yes
-    definition: "{{ lookup('file', '{{ git_local_dir }}/manifests/registry/overlays/lab/argocd-app-registry-lab.yaml') | from_yaml }}"
-
-- name: Deploy Registry Image Pruner
-  community.kubernetes.k8s:
-    state: present
-    kubeconfig: "{{ cluster_kubeconfig }}"
-    namespace: openshift-image-registry
-    wait: yes
-    definition: "{{ lookup('file', '{{ git_local_dir }}/manifests/registry/base/image-pruner.yaml') | from_yaml }}"
+    definition: "{{ lookup('file', '{{ git_local_dir }}/manifests/bootstrap/argocd-app-bootstrap.yaml') | from_yaml }}"
 
 
-- name: Migrate Metrics to Infra Nodes
-  community.kubernetes.k8s:
-    state: present
-    kubeconfig: "{{ cluster_kubeconfig }}"
-    wait: yes
-    definition: "{{ lookup('file', '{{ git_local_dir }}/manifests/migrate-metrics/overlays/lab/argocd-app-migratemetrics-lab.yaml') | from_yaml }}"
-
-- name: Deploy Cluster Users Lab Config in ArgoCD
-  community.kubernetes.k8s:
-    state: present
-    kubeconfig: "{{ cluster_kubeconfig }}"
-    wait: yes
-    definition: "{{ lookup('file', '{{ git_local_dir }}/manifests/cluster-users/overlays/lab/argocd-app-clusterusers-lab.yaml') | from_yaml }}"
-
-- name: Deploy Identity Provider Lab Config in ArgoCD
-  community.kubernetes.k8s:
-    state: present
-    kubeconfig: "{{ cluster_kubeconfig }}"
-    wait: yes
-    definition: "{{ lookup('file', '{{ git_local_dir }}/manifests/identity-provider/overlays/lab/argocd-app-idp-lab.yaml') | from_yaml }}"
-
+#- name: Deploy Custom Certs Lab Config in ArgoCD
+#  community.kubernetes.k8s:
+#    state: present
+#    kubeconfig: "{{ cluster_kubeconfig }}"
+#    wait: yes
+#    definition: "{{ lookup('file', '{{ git_local_dir }}/manifests/custom-certs/overlays/lab/argocd-app-customcerts-lab.yaml') | from_yaml }}"
+#
+#- name: Deploy Infra Nodes Lab Config in ArgoCD
+#  community.kubernetes.k8s:
+#    state: present
+#    kubeconfig: "{{ cluster_kubeconfig }}"
+#    wait: yes
+#    definition: "{{ lookup('file', '{{ git_local_dir }}/manifests/infra-nodes/overlays/lab/argocd-app-infranodes-lab.yaml') | from_yaml }}"
+#
+#- name: Deploy Registry Lab Config in ArgoCD
+#  community.kubernetes.k8s:
+#    state: present
+#    kubeconfig: "{{ cluster_kubeconfig }}"
+#    wait: yes
+#    definition: "{{ lookup('file', '{{ git_local_dir }}/manifests/registry/overlays/lab/argocd-app-registry-lab.yaml') | from_yaml }}"
+#
+#- name: Deploy Registry Image Pruner
+#  community.kubernetes.k8s:
+#    state: present
+#    kubeconfig: "{{ cluster_kubeconfig }}"
+#    namespace: openshift-image-registry
+#    wait: yes
+#    definition: "{{ lookup('file', '{{ git_local_dir }}/manifests/registry/base/image-pruner.yaml') | from_yaml }}"
+#
+#
+#- name: Migrate Metrics to Infra Nodes
+#  community.kubernetes.k8s:
+#    state: present
+#    kubeconfig: "{{ cluster_kubeconfig }}"
+#    wait: yes
+#    definition: "{{ lookup('file', '{{ git_local_dir }}/manifests/migrate-metrics/overlays/lab/argocd-app-migratemetrics-lab.yaml') | from_yaml }}"
+#
+#- name: Deploy Cluster Users Lab Config in ArgoCD
+#  community.kubernetes.k8s:
+#    state: present
+#    kubeconfig: "{{ cluster_kubeconfig }}"
+#    wait: yes
+#    definition: "{{ lookup('file', '{{ git_local_dir }}/manifests/cluster-users/overlays/lab/argocd-app-clusterusers-lab.yaml') | from_yaml }}"
+#
+#- name: Deploy Identity Provider Lab Config in ArgoCD
+#  community.kubernetes.k8s:
+#    state: present
+#    kubeconfig: "{{ cluster_kubeconfig }}"
+#    wait: yes
+#    definition: "{{ lookup('file', '{{ git_local_dir }}/manifests/identity-provider/overlays/lab/argocd-app-idp-lab.yaml') | from_yaml }}"
+#
