--- a/manifests/identity-provider/overlays/lab/google-oauth-cr.yaml
+++ b/manifests/identity-provider/overlays/lab/google-oauth-cr.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   identityProviders:
   - name: google
-    mappingMethod: mapping
+    mappingMethod: claim
     type: Google
     google:
       clientID: '520327157727-5i0mildljkumbiiuchnrrtad3m1de7t9.apps.googleusercontent.com'
