--- a/manifests/argocd/argocd-operator/argocd-operatorSubscription.yaml
+++ b/manifests/argocd/argocd-operator/argocd-operatorSubscription.yaml
@@ -9,10 +9,9 @@ metadata:
     config.example.com/name: argocd-bootstrap
     config.example.com/component: operators
   name: argocd-operator
-  namespace: argocd
 spec:
   channel: alpha
   installPlanApproval: Automatic
   name: argocd-operator
-  source: community-operators
+  source: argocd-catalog
   sourceNamespace: openshift-marketplace
